LoyaltyProgram1/src/objects/Assays__c.object
<CustomObject>
    <description>Change 3: Created for CDG USSD to track their assays. This object is linked to the Assets.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assays</relationshipLabel>
        <relationshipName>Assays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <description>Requested by CDG.</description>
        <label>Annual Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assay_Manufacturer__c</fullName>
        <description>Requested by CDG.</description>
        <label>Assay Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AESKU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alere (Inverness)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avioq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Shield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beckman Coulter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beckton Dickinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binding Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomerieux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Rad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BioTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellestis (Quantiferon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cepheid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DiaMedix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diasorin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euroimmun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujirebio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grifols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hycor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immucor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoconcepts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedMira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedTec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanogen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assay_Name__c</fullName>
        <description>Requested by CDG</description>
        <label>Assay Name</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>1,25-(OH)2 Vitamin D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-OH Vitamin D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABO/Rh Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABO Donor Confirms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANA Titer and Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCA IFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antibody Screen (2 Cell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antibody Screen (3 Cell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCA IgG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCA IgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspergillus Ag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2-GPI IgA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2-GPI IgG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2-GPI IgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta/Thal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiolipin IgA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiolipin IgG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiolipin IgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centromere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chromatin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMV IgG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMV IgM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crithidia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossmatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dsDNA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assays (Asset)</relationshipLabel>
        <relationshipName>Assays1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assays</relationshipLabel>
        <relationshipName>Assays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration__c</fullName>
        <label>Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Requested by CDG to list their divisions.</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>IDD-BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CID-AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD-SCBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSD-DBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD-CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CID-BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Methods__c</fullName>
        <label>Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Agglutination (card)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capillary electrophoresis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemiluminescence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dot/Line Blot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrophoresis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoassay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTIPLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radial immunodiffusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western blot</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Per_Test__c</fullName>
        <description>Requested by CDG.</description>
        <label>Price Per Test</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Runs_Per_Week__c</fullName>
        <description>Runs Per Week</description>
        <label>Runs Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by CDG.</description>
        <label>Sent Out</label>
        <type>Checkbox</type>
    </fields>
    <label>Assays</label>
    <nameField>
        <label>Asset Mfg/ Model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Methods_Required</fullName>
        <active>true</active>
        <description>Methods field is required when the Asset Mfg/ Model contains Manual</description>
        <errorConditionFormula>AND(CONTAINS(UPPER(Name), UPPER(&apos;Manual&apos;)), ISPICKVAL(Methods__c, &apos;&apos;) )</errorConditionFormula>
        <errorMessage>Methods field is required when Asset Mfg/ Model contains Manual</errorMessage>
    </validationRules>
</CustomObject>